2005-07-07  Albert Chu  <chu11@llnl.gov>

	* Completed cerebro-stat tool.

	* Added hostlist wrappers.

	* Added cerebro-stat manpage.

	* cerebro.spec.in: Updated.

	* Fix pthread creation bugs.

	* tagged cerebro-1-0-0-pre4
	
2005-07-06  Albert Chu  <chu11@llnl.gov>

	* Continue work on cerebro-stat tool.

	* Fix pthread stack size bug.

	* Fix metric server double hostname return bug.
	
2005-07-05  Albert Chu  <chu11@llnl.gov>

	* Begin work on cerebro-stat tool.

	* Various bug fixes.
	
2005-07-02  Albert Chu  <chu11@llnl.gov>

	* More code cleanup.
	
2005-07-01  Albert Chu  <chu11@llnl.gov>

	* Fix various mem-leaks and bugs.

	* Massive code cleanup.
	
2005-06-29  Albert Chu  <chu11@llnl.gov>

	* Fix remaining version checking bugs.

	* Fix maximum packet length buffer bugs.

	* Sort metric modules based on next call time for faster on
 	average searches.

	* Added network util functions for common network code.

	* Fix assert/wrappers code.

	* Errnum support in util lib.
	
2005-06-28  Albert Chu  <chu11@llnl.gov>

	* Continued bug fixes and code cleanup.

	* Updated manpages.

	* Performance improvement through use of index instead of list for
	metric names.

	* Fix protocol version checking bugs.
	
2005-06-27  Albert Chu  <chu11@llnl.gov>

	* Re-work cerebrod and libcerebro to use debug lib.

	* Various bug fixes and code enhancement..
	
2005-06-26  Albert Chu  <chu11@llnl.gov>

	* Re-work modules lib and util lib to use debug library.

	* Re-work modules to use debug library.

	* cerebro.spec.in: Support debug build.
	
2005-06-24  Albert Chu  <chu11@llnl.gov>

	* Continued worked on metric_names metric.

	* tagged post-metric-names-metric-1

	* Various code cleanup and corner case fixing.

	* Added debug library.
	
2005-06-23  Albert Chu  <chu11@llnl.gov>

	* Fixed slurm_state metric bugs.

	* cerebro.spec.in: Updated for slurm_state metric.

	* Various minor bug fixes.

	* tagged pre-metric-names-metric-1

	* Begin work to support metric_names metric
