@@ -1,9 +1,9 @@
 ##
-# $Id: META,v 1.5 2005-07-07 18:03:55 achu Exp $
+# $Id: META,v 1.5.2.1 2005-08-09 23:43:52 achu Exp $
 ##
 # Metadata for RPM/TAR makefile targets
 ##
   Meta:		1
   Name:		cerebro
   Version:	1.0
-  Release:	0.pre4
+  Release:	0.pre4.1
