@@ -1,14 +1,16 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.1 2005-03-15 23:14:39 achu Exp $
+## $Id: Makefile.am,v 1.1.2.1 2005-08-09 23:43:52 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
  
-CEREBRODINIT = cerebrod
-CEREBRODINITdir = $(sysconfdir)/init.d
-CEREBRODINIT_DATA = $(CEREBRODINIT)
- 
-EXTRA_DIST = $(CEREBRODINIT)
- 
+EXTRA_DIST = cerebrod-redhat cerebrod-suse
+  
 install-data-hook:
-	chmod 755 $(DESTDIR)/$(CEREBRODINITdir)/$(CEREBRODINIT)
+	$(top_srcdir)/config/install-sh -m 755 -d $(DESTDIR)/etc/init.d
+	if test -a /etc/rc.status; then \
+		cp $(srcdir)/cerebrod-suse $(DESTDIR)/$(sysconfdir)/init.d/cerebrod; \
+	else \
+		cp $(srcdir)/cerebrod-redhat $(DESTDIR)/$(sysconfdir)/init.d/cerebrod; \
+	fi
+	chmod 755 $(DESTDIR)/$(sysconfdir)/init.d/cerebrod
