@@ -1,51 +1,0 @@
-#!/bin/sh
-# $Id: cerebrod,v 1.1 2005-03-15 23:14:39 achu Exp $
-#
-# chkconfig: 2345 70 40
-# description: cerebrod startup script
-#
-CEREBROD=/usr/sbin/cerebrod
-
-. /etc/rc.d/init.d/functions
-
-RETVAL=0
-
-case "$1" in
-   start)
-   	echo -n "Starting cerebrod: "
-   	[ -f $CEREBROD ] || exit 1
-
-   	daemon $CEREBROD
-   	RETVAL=$?
-   	echo
-   	[ $RETVAL -eq 0 ] && touch /var/lock/subsys/cerebrod
-   	;;
-  stop)
-   	echo -n "Shutting down cerebrod: "
-   	killproc cerebrod
-   	RETVAL=$?
-   	echo
-   	[ $RETVAL -eq 0 ] && rm -f /var/lock/subsys/cerebrod
-   	;;
-  restart|reload)
-   	$0 stop
-   	$0 start
-   	RETVAL=$?
-   	;;
-  status)
-   	status cerebrod
-   	RETVAL=$?
-   	;;
-  condrestart)
-   	if test -e /var/lock/subsys/cerebrod; then \
-   		$0 stop; \
-   		$0 start; \
-   		RETVAL=$?; \
-   	fi
-   	;;
-  *)
-	echo "Usage: $0 {start|stop|restart|status|condrestart}"
-	exit 1
-esac
-
-exit $RETVAL
