@@ -1,5 +1,5 @@
 #!/bin/sh
-# $Id: cerebrod-suse,v 1.2 2005-08-09 23:35:10 achu Exp $
+# $Id: cerebrod-suse,v 1.2.2.1 2005-08-09 23:43:52 achu Exp $
 #
 ### BEGIN INIT INFO
 # Provides: cerebrod
